# touchpad-jitter-filter

./: .gitignore  Cargo.toml  README.md
docs/: architecture.md  faq.md  index.md  installation.md  usage.md
src/: main.rs
